# smart-nvr

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/auth/: dependencies.py  jwt.py  password.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  camera.py  event.py  event_summary.py  pattern.py  user.py
backend/app/pipeline/: camera_pipeline.py  event_consumer.py  event_publisher.py  frame_grabber.py  pipeline_manager.py  recorder.py  state_machine.py
backend/app/pipeline/attributes/: __init__.py  base.py  (+4 more)
backend/app/routers/: auth.py  cameras.py  dashboard.py  events.py  health.py  patterns.py  pipeline.py  users.py  ws.py
backend/app/schemas/: auth.py  camera.py  dashboard.py  event.py  health.py  pagination.py  pattern.py  user.py
backend/app/services/: camera_service.py  dashboard_service.py  event_service.py  pattern_service.py  user_service.py
backend/app/tests/: conftest.py  test_attribute_registry.py  test_auth.py  test_cameras.py  test_cascade_pipeline.py  test_crowd_density.py  test_detector.py  test_events.py  test_health.py  test_line_crossing.py  test_loitering.py  test_pattern_base.py  test_pattern_engine.py  test_patterns.py  test_rbac.py  test_smoking_pattern.py  test_state_machine.py  test_track.py  test_weapon_pattern.py  test_zone_intrusion.py
backend/scripts/: wait_for_db.py
(+80 files in other folders)
